-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 12.0.0
-
None
-
-
d278923dd (12.0)
To reproduce:
1. Load a session containing top level Qt project (doesn't happen when loading Creator project).
2. When loading, change the mode to Projects.
3. Wait until Stop CMake button changes into Run CMake and press it as soon as the label changed.
4. Wait for a crash.
Call stack:
1 __pthread_kill_implementation pthread_kill.c 44 0x7ffff42969fc 2 __pthread_kill_internal pthread_kill.c 78 0x7ffff42969fc 3 __GI___pthread_kill pthread_kill.c 89 0x7ffff42969fc 4 __GI_raise raise.c 26 0x7ffff4242476 5 __GI_abort abort.c 79 0x7ffff42287f3 6 qAbort qglobal.cpp 161 0x7ffff4ac52e0 7 qt_message_fatal qlogging.cpp 2059 0x7ffff4ad51aa 8 QMessageLogger::fatal qlogging.cpp 939 0x7ffff4ad13ae 9 qt_assert qassert.cpp 68 0x7ffff4ac3236 10 QList<QString>::takeFirst qlist.h 528 0x7fff84db80d7 11 CMakeProjectManager::CMakeParser::flush cmakeparser.cpp 204 0x7fff84db1d11 12 CMakeProjectManager::CMakeParser::handleLine cmakeparser.cpp 73 0x7fff84daf9a1 13 Utils::OutputFormatter::handleMessage outputformatter.cpp 342 0x7ffff7a24306 14 Utils::OutputFormatter::doAppendMessage outputformatter.cpp 294 0x7ffff7a23bd2 15 Utils::OutputFormatter::appendMessage outputformatter.cpp 670 0x7ffff7a262c4 16 operator() cmakeprocess.cpp 128 0x7fff84dc42b5 17 std::__invoke_impl<void, CMakeProjectManager::Internal::CMakeProcess::run(const CMakeProjectManager::Internal::BuildDirParameters&, const QStringList&)::<lambda(const QString&)>&, const QString&>(std::__invoke_other, struct {...} &) invoke.h 61 0x7fff84dc775d 18 std::__invoke_r<void, CMakeProjectManager::Internal::CMakeProcess::run(const CMakeProjectManager::Internal::BuildDirParameters&, const QStringList&)::<lambda(const QString&)>&, const QString&>(struct {...} &) invoke.h 111 0x7fff84dc74db 19 std::_Function_handler<void(const QString&), CMakeProjectManager::Internal::CMakeProcess::run(const CMakeProjectManager::Internal::BuildDirParameters&, const QStringList&)::<lambda(const QString&)>>::_M_invoke(const std::_Any_data &, const QString &) std_function.h 290 0x7fff84dc71be 20 std::function<void (QString const&)>::operator()(QString const&) const std_function.h 590 0x7ffff79e1505 21 Utils::Internal::ChannelBuffer::append process.cpp 1788 0x7ffff7a59951 22 Utils::Internal::ProcessPrivate::handleReadyRead process.cpp 2020 0x7ffff7a5ac9b 23 QtPrivate::FunctorCall<QtPrivate::IndexesList<0, 1>, QtPrivate::List<QByteArray const&, QByteArray const&>, void, void (Utils::Internal::ProcessPrivate:: *)(QByteArray const&, QByteArray const&)>::call qobjectdefs_impl.h 137 0x7ffff7a6d8e4 24 QtPrivate::FunctionPointer<void (Utils::Internal::ProcessPrivate:: *)(QByteArray const&, QByteArray const&)>::call<QtPrivate::List<QByteArray const&, QByteArray const&>, void> qobjectdefs_impl.h 174 0x7ffff7a6bfd2 25 QtPrivate::QSlotObject<void (Utils::Internal::ProcessPrivate:: *)(QByteArray const&, QByteArray const&), QtPrivate::List<QByteArray const&, QByteArray const&>, void>::impl qobjectdefs_impl.h 398 0x7ffff7a69d4d 26 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 374 0x7ffff4b9dbb7 27 doActivate<false> qobject.cpp 4017 0x7ffff4c1611a 28 QMetaObject::activate qobject.cpp 4077 0x7ffff4c0bff5 29 Utils::ProcessInterface::readyRead moc_processinterface.cpp 235 0x7ffff774ce7a 30 QtPrivate::FunctorCall<QtPrivate::IndexesList<0, 1>, QtPrivate::List<QByteArray const&, QByteArray const&>, void, void (Utils::ProcessInterface:: *)(QByteArray const&, QByteArray const&)>::call qobjectdefs_impl.h 137 0x7ffff7a6d54f 31 QtPrivate::FunctionPointer<void (Utils::ProcessInterface:: *)(QByteArray const&, QByteArray const&)>::call<QtPrivate::List<QByteArray const&, QByteArray const&>, void> qobjectdefs_impl.h 174 0x7ffff7a6bdb8 32 QtPrivate::QSlotObject<void (Utils::ProcessInterface:: *)(QByteArray const&, QByteArray const&), QtPrivate::List<QByteArray const&, QByteArray const&>, void>::impl qobjectdefs_impl.h 398 0x7ffff7a6981f 33 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 374 0x7ffff4b9dbb7 34 doActivate<false> qobject.cpp 4017 0x7ffff4c1611a 35 QMetaObject::activate qobject.cpp 4077 0x7ffff4c0bff5 36 Utils::Internal::CallerHandle::readyRead moc_launchersocket.cpp 264 0x7ffff7749fbc 37 Utils::Internal::CallerHandle::handleReadyRead launchersocket.cpp 147 0x7ffff79b7678 38 Utils::Internal::CallerHandle::flushFor launchersocket.cpp 116 0x7ffff79b73cf 39 Utils::Internal::CallerHandle::flush launchersocket.cpp 72 0x7ffff79b6ef7 40 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (Utils::Internal::CallerHandle:: *)()>::call(void (Utils::Internal::CallerHandle:: *)(), Utils::Internal::CallerHandle *, void * *) qobjectdefs_impl.h 137 0x7ffff79c318a 41 QtPrivate::FunctionPointer<void (Utils::Internal::CallerHandle:: *)()>::call<QtPrivate::List<>, void>(void (Utils::Internal::CallerHandle:: *)(), Utils::Internal::CallerHandle *, void * *) qobjectdefs_impl.h 174 0x7ffff79c1bac 42 QtPrivate::QSlotObject<void (Utils::Internal::CallerHandle:: *)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *) qobjectdefs_impl.h 398 0x7ffff79c017b 43 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 374 0x7ffff4b9dbb7 44 QMetaCallEvent::placeMetaCall qobject.cpp 650 0x7ffff4c02f47 45 QObject::event qobject.cpp 1419 0x7ffff4c041e4 46 QApplicationPrivate::notify_helper qapplication.cpp 3287 0x7ffff69a8cfa 47 QApplication::notify qapplication.cpp 3238 0x7ffff69a8aec 48 QCoreApplication::notifyInternal2 qcoreapplication.cpp 1118 0x7ffff4b7a405 49 QCoreApplication::sendEvent qcoreapplication.cpp 1536 0x7ffff4b7afa7 50 QCoreApplicationPrivate::sendPostedEvents qcoreapplication.cpp 1898 0x7ffff4b7befe 51 QCoreApplication::sendPostedEvents qcoreapplication.cpp 1757 0x7ffff4b7b7cc 52 postEventSourceDispatch qeventdispatcher_glib.cpp 243 0x7ffff4fc90fc 53 g_main_context_dispatch 0x7ffff451bd3b 54 ?? 0x7ffff4571258 55 g_main_context_iteration 0x7ffff45193e3 56 QEventDispatcherGlib::processEvents qeventdispatcher_glib.cpp 393 0x7ffff4fc99be 57 QXcbGlibEventDispatcher::processEvents qxcbeventdispatcher.cpp 96 0x7ffff051df3e 58 QEventLoop::processEvents qeventloop.cpp 100 0x7ffff4b8e98d 59 QEventLoop::exec qeventloop.cpp 182 0x7ffff4b8ecfc 60 QCoreApplication::exec qcoreapplication.cpp 1439 0x7ffff4b7ad70 61 QGuiApplication::exec qguiapplication.cpp 1909 0x7ffff59e5c82 62 QApplication::exec qapplication.cpp 2566 0x7ffff69a5ce7 63 main main.cpp 831 0x555555565642
For Gerrit Dashboard: QTCREATORBUG-29732 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
510472,2 | CMakeParser: Ensure the details list isn't empty | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |