CMakeParser: Ensure the details list isn't empty

Amends bda5c6a22804102b064b7d2bbeeee240dda6f815

Fixes: QTCREATORBUG-29732
Change-Id: Iac518227df42c4d22b808028958210485a9c02ff
Reviewed-by: Cristian Adam <cristian.adam@qt.io>